--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,12 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
-	<body>
+<body>
+<table>
+	<th>ID</th>
+	<th>タイトル</th>
+	<th>公開年</th>
+	<th>概要</th>
+	<th>画像URL</th>
+	<th>上映中か</th>
+	<th>作成日</th>
+	<th>更新日時</th>
 	<% @movie.each do |movie| %>
-	<%= movie.image_url %>
-	 <h2><%=movie.name %></h2>
-	 <p><%= movie.description %></p>
-	 <p><%= movie.year %></p>
+	<td><%= movie.id %></td>
+	<td><%= movie.name %> </td>
+	<td> <%= movie.year %>  </td>
+	<td> <%= movie.description%> </td>
+	<td> <%= movie.is_showing %> </td>
+	<td> <%= movie.image_url %> </td>
+	<td> <%= movie.created_at %> </td>
+	<td> <%= movie.updated_at %> </td>
+</table>
 	<% end %>
-	</body>
+</body>
 </html>
