--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <%= render 'shared/head' %>
-	<title>Document</title>
+	<title>Edit</title>
 </head>
 <body>
 <%= form_with model: @movie do |form| %>
