--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -11,7 +11,7 @@ img {
 .movies_data {
 	margin: 10px auto;
 	border: solid gray;
-	height: 300px;
+	height: 15%;
 	width: 30%;
 	text-align: center;
 	padding: 20px 0 0;
