--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,13 +8,17 @@
     <div class="movies_data">
       <%= image_tag @movie.image_url %> 
       <p><%= @movie.name %> </p>	
-      <p><%= @schedule.start_time %>〜<%= @schedule.end_time %></p>
+      <p><%= @movie.year %></p>
+      <p><%  @movie.description%></p>
+      <% @schedules.each do |s|%>
+      <p><%= s.start_time %>〜<%= s.end_time %></p>
+      <% end%>
     </div>  
 
   <div class="reservation">
     <%= form_with model: @reservation, url: movie_schedule_sheets_path(movie_id: @movie.id, schedule_id: @schedule.id), method: :get do |f| %>
       <%= f.select :date, week_reservation %>
-      <%= f.submit "予約する"%>
+      <%= f.submit "座席を予約する"%>
     <% end %>
   </div>
 </body>
