--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -19,6 +19,7 @@
     <%= form_with model: @reservation, url: movie_schedule_sheets_path(movie_id: @movie.id, schedule_id: @schedule.id), method: :get do |f| %>
       <%= f.select :date, week_reservation %>
       <%= f.submit "座席を予約する"%>
+      <button>座席を予約する</button>
     <% end %>
   </div>
 </body>
