--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,17 +10,19 @@
       <p><%= @movie.name %> </p>	
       <p><%= @movie.year %></p>
       <p><%  @movie.description%></p>
+      <p><%= @movie.is_showing %></p>
       <% @schedules.each do |s|%>
       <p><%= s.start_time %>〜<%= s.end_time %></p>
       <% end%>
     </div>  
 
   <div class="reservation">
-    <%= form_with model: @reservation, url: movie_schedule_sheets_path(movie_id: @movie.id, schedule_id: @schedule.id), method: :get do |f| %>
-      <%= f.select :date, week_reservation %>
-      <%= f.submit "座席を予約する"%>
-      <button>座席を予約する</button>
-    <% end %>
+  <% if @schedule != false %>
+      <%= form_with model: @reservation, url: movie_schedule_sheets_path(movie_id: @movie.id, schedule_id: @schedule.id), method: :get do |f| %>
+        <%= f.select :date, week_reservation %>
+        <%= f.submit "座席を予約する"%>
+      <% end %>
+    <% end%>
   </div>
 </body>
 </html>
