--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -6,6 +6,7 @@
 	<title>new</title>
 </head>
 <body>
+<%# new template  %>
   <div class="select_all">
     <%= form_with url: reservations_path, scope: :reservation do |f|%>
       <h2>予約ページ</h2>
