--- a/app/assets/stylesheets/sheets.scss
+++ b/app/assets/stylesheets/sheets.scss
@@ -9,7 +9,7 @@ body {
 	margin: 0 20px 20px 20px;
 }
 
-.sheet {
+.available {
 	width: 13%;
 	height: 20%;
 	background-color: aquamarine;
@@ -17,4 +17,18 @@ body {
 	margin: 10px;
 	padding: 30px;
 	text-align: center;
+	background-color: orange;
+	color: white;
+}
+
+.unavailable {
+	width: 13%;
+	height: 20%;
+	background-color: aquamarine;
+	display: inline-block;	
+	margin: 10px;
+	padding: 30px;
+	text-align: center;
+	background-color: gray;
+	pointer-events: none;
 }
