--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -16,6 +16,7 @@
         <th>シートID</th>
         <th>スケジュールID</th>
         <th>予約日</th>
+        <th>シート番号</th>
         <th>更新日</th>
         <th>作成日</th>
         <th>削除</th>
@@ -30,6 +31,7 @@
           <td><%= f.sheet_id %></td>
           <td><%= f.schedule_id %></td> 
           <td><%= f.date %></td>
+          <td><%= f.row %><%= f.column %></td>
           <td><%= f.updated_at%></td>
           <td><%= f.created_at%></td>
           <td><%= link_to "削除する", admin_reservation_path(f.reservations_id), method: :delete %></td>
