--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%= render 'shared/head' %>
-    <%= stylesheet_link_tag '/admin/reservations', media: 'all'%>
+    <%= stylesheet_link_tag "reservations", media: 'all'%>
     <title>index</title>
   </head>
 <body>
